Fully depend on gradle and reduce all other cruft